--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "node server.js",
     "db:init": "node scripts/init-db.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "axios": "^1.12.2",
     "body-parser": "^1.15.2",
